# pokeca-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: example_deck_recipies.json
notebooks/: dashboard.ipynb  getAllCards.ipynb  getDeckCategories.ipynb  getDeckFromLeagues.ipynb  getPokemonName.ipynb  queryDBExample.ipynb  readPokemonName.ipynb
pokeca_rec/src/: deck_categorizer.py  deck_crawler.py  official_crawler.py  pokeca_product_extractor.py  pokecabook_crawler.py  ptcg_db_builder.py  ptcg_product_crawler.py
pokeca_rec/utils/: chrome_option.py  selenium_helper.py
scripts/: build_db.py  read_db.py
service/: app.py  db.py
service/static/: script.js
service/templates/: index.html
src/: extractor.py
src/pokeca_rec/: deck_categorizer.py  deck_crawler.py  official_crawler.py  pokecabook_crawler.py  ptcg_db_builder.py  ptcg_product_crawler.py
src/pokeca_rec/utils/: selenium_helper.py
