[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pokeca_rec"
authors = [
    {name = "BlakePan", email = "gatakiriba50@gmail.com"}
]
version = "1.0.0"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "flask",
    "pandas",
    "selenium",
    "tinydb",
    "tqdm",
    "matplotlib"
]
readme = "README.md"
description = "A Recommendation System for Pokeca Deck Building."

[project.optional-dependencies]
dev = ["black", "isort", "flake8"]

[tool.black]
line-length = 79
